import 'package:core/core.dart';

const profileSocialProviders = {
  'github': ('GitHub', 'https://github.com/'),
  'twitter': ('X / Twitter', 'https://twitter.com/'),
  'linkedIn': ('LinkedIn', 'https://www.linkedin.com/in/'),
  'weibo': ('Weibo', 'https://weibo.com/'),
  'bilibili': ('Bilibili', 'https://space.bilibili.com/'),
  'zhihu': ('Zhihu', 'https://www.zhihu.com/people/'),
};
...
